--- a/encargo/templates/encargo.html
+++ b/encargo/templates/encargo.html
@@ -43,8 +43,8 @@
 
 
 				</form>
-				<a href="http://localhost:8000/paso2" class="button1">Crear nuevo prescriptor</a>
-				<a href="http://localhost:8000/paso3" class="button2">Crear nuevo cliente</a>
+				<a href="prescriptores" class="button1">Crear nuevo prescriptor</a>
+				<a href="clientes" class="button2">Crear nuevo cliente</a>
 			</div>
 		</div>
 
